assets/css/main.scss
/* ... */
.modal-content *::before, .modal-content *::after {
  content: "";
}

.modal-header {
  padding: 3px;
}

.modal-content h3 {
  text-align: center;
  font-size: 1.25em;
  font-family: $fred;
  color: $mango;
}

h2.modal-title {
  text-align: center;
  font-size: 1.75em;
  padding: 10px 0;
  font-family: $fred;
  color: $sun;
}

.btn-secondary {
  background-color: black;
}

.modal-footer a {
  color: white;
}

.rwd-image {
  width: 100%;
  padding: 15px 0;
}

.client-review {
  background: rgba(255, 255, 255, 1);
  padding: 15px 25px;
  color: black;
}

.client-review p, .client-review h4 {
  text-align: center;
}

.client-review h4 {
  font-weight: bold;
  font-size: 1.4em;
}

.client-review p::before {
  content:'\f10d';
  font-family: FontAwesome;
  padding: 20px 0;
  font-size: 2em;
  display: block;
}

.review-pic {
  display: block;
  width: 125px;
  height: 125px;
  margin: 17px auto;
  border-radius: 180%;
}

.modal-content .dismiss-modal {
  position: absolute;
  top: 12px;
  right: 10px;
  color: white;
  background-color: transparent;
  border: none;
  font-family: $fred;
  font-size: 1.4em;
  opacity: .6;
  transition: .3s;
}

.modal-content .dismiss-modal:hover {
  opacity: 1;
}

/* ====================================
Media Queries
==================================== */
@media all and (max-width: 1199px) {

  button.btn-subpage {
    margin-top: 20px;
  }

  .hello {
    font-size: 2.5em;
  }

  .my-name {
    font-size: 4em;
  }

  .subpage-title {
    margin-bottom: 25px;
    @include animation-delay(1s);
  }
}

@media all and (max-width: 991px) {
  .my-name, .hello, .subpage-title {
    text-shadow: none;
  }

  .about-tech {
    display: none;
  }

  .tech-icons-horizontal {
    display: block;
    margin-bottom: 20px;
  }

  .my-name, .hello {
    line-height: 40px;
  }

  .hello {
    font-size: 1.8em;
    color: #222;
  }

  .my-name {
    font-size: 3em;
    margin-top: 0;
    color: #333;
  }

  .subpage-title {
    font-size: 2.5em;
  }

  .client-logo img.logo-img {
    width: 70%;
    margin: 0 auto;
  }
}

@media (min-width: 768px) {
  .client-logo {
    height: 100px;
  }
}

@media all and (max-width: 767px) {
  *, body, h1, h2, h3, p, li, span, strong, blockquote {
    font-size: 16px;
  }

  .view {
    margin-left: 0;
    padding-top: 50px;
  }

  .load-screen {
    width: 100vw;
    height: 100vh;
    margin-left: 0;
  }

  .navigation {
    height: 70px;
    width: 100%;
    z-index: 101;
  }

  .navigation ul {
    padding: 10px 0 20px 0;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-around;
    height: 70px;
  }

  .navigation ul li, .navigation ul li:last-child {
    margin-bottom: 0;
  }

  .navigation ul li a span {
    padding-top: 5px;
  }

  span.white {
    color: $apple;
  }

  .subpage-title {
    font-size: 2.5em;
  }

  .about-text p {
    text-align: left;
  }

  button.btn-subpage a, button.btn-red a {
    font-size: 1em;
  }

  .drawer {
    width: 100%;
  }

  .repo-link {
    font-size: 13px;
  }
}

/* landscape orientation for smartphones display only a fully width orientation image */
@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 480px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {
  .rotate-tablet {
    display: block;
  }
}

@media only screen
  and (min-device-width: 320px)
  and (max-device-width: 568px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {
    .rotate-tablet {
      display: block;
    }
}

/* Landscape */
@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 667px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {
    .rotate-tablet {
      display: block;
    }
}

/* Landscape */
@media only screen
  and (min-device-width: 414px)
  and (max-device-width: 736px)
  and (-webkit-min-device-pixel-ratio: 3)
  and (orientation: landscape) {
    .rotate-tablet {
      display: block;
    }
}

@media all and (max-width: 631px) {
  .my-name, .hello {
    line-height: 30px;
  }

  .my-name {
    font-size: 2.5em;
    line-height: 50px;
  }

  .hello {
    font-size: 1.8em;
  }

  .subpage-title {
    font-size: 2.5em;
  }

  .portfolio-text {
    text-align: left;
  }
}

@media all and (max-width: 510px) {
  .client-logo img.logo-img {
    width: 100%;
    margin: 0 auto;
  }
}

@media all and (max-width: 491px) {
  .my-name span {
    display: none;
  }

  .modal-content p {
    font-size: .7em;
  }
}

@media all and (max-width: 375px) {
  .my-name {
    font-size: 2em;
    line-height: 25px;
  }

  .hello {
    font-size: 1.5em;
  }

  .tldr {
    display: block;
    font-size: .8em;
  }

  .social-icons {
    display: none;
  }

  .mobile-social {
    display: block;
    position: absolute;
    right:0;
    top: 70px;
    padding: 10px;
    z-index: 4;
  }

  .mobile-social a {
    font-size: 1.5atoem;
  }

  .about-buttons {
    display: none;
  }
}

